[gd_scene load_steps=14 format=3 uid="uid://tr8stnwafdgs"]

[ext_resource type="Script" path="res://scripts/timer_bomb_guy.gd" id="1_p87ll"]
[ext_resource type="Texture2D" uid="uid://bulmv06nsm4j4" path="res://assets/timer_enemy.png" id="2_hheqv"]
[ext_resource type="PackedScene" uid="uid://dcd72ihkctsg4" path="res://components/hurtbox.tscn" id="3_6pmwn"]
[ext_resource type="Texture2D" uid="uid://dceistkxem33v" path="res://assets/explosio.png" id="4_agn12"]
[ext_resource type="PackedScene" uid="uid://daytajnd160e8" path="res://components/health_component.tscn" id="4_iq6ts"]
[ext_resource type="PackedScene" uid="uid://p7rtwtkyoxl6" path="res://components/hitbox.tscn" id="5_qtv70"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m2ko"]
size = Vector2(10, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssdwg"]
size = Vector2(22, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_5vt2y"]
radius = 169.027

[sub_resource type="Animation" id="Animation_wuo3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tpbea"]
resource_name = "walking"
length = 0.3
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13i44"]
_data = {
"RESET": SubResource("Animation_wuo3d"),
"walking": SubResource("Animation_tpbea")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vexs1"]
radius = 31.0644

[node name="timerBombGuy" type="CharacterBody2D"]
position = Vector2(17, -15)
collision_layer = 2
collision_mask = 65
script = ExtResource("1_p87ll")
knockback = 4000

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hheqv")
hframes = 4

[node name="enviromentCollider" type="CollisionShape2D" parent="."]
position = Vector2(-17, 8.5)
shape = SubResource("RectangleShape2D_3m2ko")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_6pmwn")]
position = Vector2(-18, 0)
collision_layer = 32
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_ssdwg")

[node name="playerDetection" type="Area2D" parent="."]
position = Vector2(-17, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetection"]
shape = SubResource("CircleShape2D_5vt2y")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-17, 8)

[node name="explosionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="timetilllaunch" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_iq6ts")]
player = NodePath("..")

[node name="pauseTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_13i44")
}

[node name="explosion" type="Sprite2D" parent="."]
visible = false
position = Vector2(-17, 9)
texture = ExtResource("4_agn12")
hframes = 4

[node name="exploding" type="Timer" parent="."]
wait_time = 0.3

[node name="Hitbox" parent="." instance=ExtResource("5_qtv70")]
position = Vector2(-17, 8)
collision_layer = 16
collision_mask = 8
attack_damage = 5.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_vexs1")
disabled = true

[connection signal="area_entered" from="playerDetection" to="." method="_on_player_detection_area_entered"]
[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
